--- a/package.json
+++ b/package.json
@@ -5,5 +5,12 @@
   "main": "index.js",
   "repository": "https://github.com/Skeba/DevOps-2021-SlackBot.git",
   "author": "Skeba <seba.lundgren@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "jest": "^27.3.1",
+    "yest": "^0.0.1"
+  },
+  "scripts": {
+    "test": "jest"
+  }
 }
