--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
   "author": "Skeba <seba.lundgren@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "eslint": "^8.1.0",
-    "jest": "^27.3.1",
-    "yest": "^0.0.1"
+    "jest": "^27.3.1"
   },
   "scripts": {
     "test": "jest"
